# MLSR

./: LICENSE  README.md  dune  env.ml  eval.ml  example.mlsr  lexer.mll  main.ml  mlsr.opam  parser.mly  sr_lambda.ml  syntax.ml  type.ml  typing.ml
examples/: 2.1.mlsr  2.2.mlsr  2.3.mlsr  4.5_remark1.mlsr  5.2.mlsr  readme.mlsr
lib/: dune  env.ml  eval.ml  lexer.mll  op.ml  parser.mly  repl.ml  syntax.ml  type.ml  typing.ml
test/: dune  test.ml
